changes: * move domains into separate module * add domains migrations
