# apps/server/docs/swagger.json
@@ -4239,12 +4239,6 @@
                 "description": {
                     "type": "string"
                 },
-                "domains": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
                 "footer_text": {
                     "type": "string"
                 },
