# apps/server/src/modules/status_page/status_page.mongo.repository.go
@@ -25,7 +25,6 @@ type mongoModel struct {
 	FooterText           string             `bson:"footer_text"`
 	GoogleAnalyticsTagID string             `bson:"google_analytics_tag_id"`
 	AutoRefreshInterval  int                `bson:"auto_refresh_interval"`
-	Domains              []string           `bson:"domains,omitempty"`
 
 	CreatedAt time.Time `bson:"created_at"`
 	UpdatedAt time.Time `bson:"updated_at"`
@@ -42,7 +41,6 @@ func toDomainModel(m *mongoModel) *Model {
 		Published:           m.Published,
 		FooterText:          m.FooterText,
 		AutoRefreshInterval: m.AutoRefreshInterval,
-		Domains:             m.Domains,
 
 		CreatedAt: m.CreatedAt,
 		UpdatedAt: m.UpdatedAt,
@@ -90,7 +88,6 @@ func (r *MongoRepository) Create(ctx context.Context, statusPage *Model) (*Model
 		UpdatedAt:           time.Now().UTC(),
 		FooterText:          statusPage.FooterText,
 		AutoRefreshInterval: statusPage.AutoRefreshInterval,
-		Domains:             statusPage.Domains,
 	}
 
 	_, err := r.collection.InsertOne(ctx, mm)
@@ -121,18 +118,6 @@ func (r *MongoRepository) FindByID(ctx context.Context, id string) (*Model, erro
 func (r *MongoRepository) FindBySlug(ctx context.Context, slug string) (*Model, error) {
 	var mm mongoModel
 	err := r.collection.FindOne(ctx, bson.M{"slug": slug}).Decode(&mm)
-	if err != nil {
-		if errors.Is(err, mongo.ErrNoDocuments) {
-			return nil, nil // Not found
-		}
-		return nil, err
-	}
-	return toDomainModel(&mm), nil
-}
-
-func (r *MongoRepository) FindByDomain(ctx context.Context, domain string) (*Model, error) {
-	var mm mongoModel
-	err := r.collection.FindOne(ctx, bson.M{"domains": bson.M{"$in": []string{domain}}}).Decode(&mm)
 	if err != nil {
 		if errors.Is(err, mongo.ErrNoDocuments) {
 			return nil, nil // Not found
@@ -207,9 +192,6 @@ func (r *MongoRepository) Update(ctx context.Context, id string, statusPage *Upd
 	}
 	if statusPage.AutoRefreshInterval != nil {
 		updatePayload["auto_refresh_interval"] = *statusPage.AutoRefreshInterval
-	}
-	if statusPage.Domains != nil {
-		updatePayload["domains"] = *statusPage.Domains
 	}
 
 	if len(updatePayload) == 0 {
