# apps/server/src/modules/status_page/status_page.sql.repository.go
@@ -22,7 +22,6 @@ type sqlModel struct {
 	UpdatedAt           time.Time `bun:"updated_at,nullzero,notnull,default:current_timestamp"`
 	FooterText          string    `bun:"footer_text"`
 	AutoRefreshInterval int       `bun:"auto_refresh_interval,notnull,default:30"`
-	Domains             []string  `bun:"domains,array"`
 }
 
 func toDomainModelFromSQL(sm *sqlModel) *Model {
@@ -38,7 +37,6 @@ func toDomainModelFromSQL(sm *sqlModel) *Model {
 		UpdatedAt:           sm.UpdatedAt,
 		FooterText:          sm.FooterText,
 		AutoRefreshInterval: sm.AutoRefreshInterval,
-		Domains:             sm.Domains,
 	}
 }
 
@@ -55,7 +53,6 @@ func toSQLModel(m *Model) *sqlModel {
 		UpdatedAt:           m.UpdatedAt,
 		FooterText:          m.FooterText,
 		AutoRefreshInterval: m.AutoRefreshInterval,
-		Domains:             m.Domains,
 	}
 }
 
@@ -96,18 +93,6 @@ func (r *SQLRepositoryImpl) FindByID(ctx context.Context, id string) (*Model, er
 func (r *SQLRepositoryImpl) FindBySlug(ctx context.Context, slug string) (*Model, error) {
 	sm := new(sqlModel)
 	err := r.db.NewSelect().Model(sm).Where("slug = ?", slug).Scan(ctx)
-	if err != nil {
-		if err.Error() == "sql: no rows in result set" {
-			return nil, nil
-		}
-		return nil, err
-	}
-	return toDomainModelFromSQL(sm), nil
-}
-
-func (r *SQLRepositoryImpl) FindByDomain(ctx context.Context, domain string) (*Model, error) {
-	sm := new(sqlModel)
-	err := r.db.NewSelect().Model(sm).Where("? = ANY(domains)", domain).Scan(ctx)
 	if err != nil {
 		if err.Error() == "sql: no rows in result set" {
 			return nil, nil
@@ -181,10 +166,6 @@ func (r *SQLRepositoryImpl) Update(ctx context.Context, id string, statusPage *U
 	}
 	if statusPage.AutoRefreshInterval != nil {
 		query = query.Set("auto_refresh_interval = ?", *statusPage.AutoRefreshInterval)
-		hasUpdates = true
-	}
-	if statusPage.Domains != nil {
-		query = query.Set("domains = ?", *statusPage.Domains)
 		hasUpdates = true
 	}
 
